<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginbutton">Login</string>
    <string name="accountButton">signup</string>
    <string name="login_button">Login</string>
    <string name="account_button">Sign up</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="wel_string">Welcome To Udacity ShoeStore</string>
    <string name="wel_string2">Click on next button to continue</string>
    <string name="next">Next</string>
    <string name="ins_string">Please read instruction carefully before proceeding</string>
    <string name="ins_string2">Click on next button to continue</string>
    <string name="enter_shoe_details">Enter shoe details</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_description">shoe description</string>
    <string name="cancel_button">Cancel button</string>
    <string name="save_button">Save Button</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
</resources>
